# TheWall-Backend

./: .gitattributes  .gitignore  Application.h  CMakeLists.txt  LICENSE  README.md  WallBackend.cpp  WallBackend.h  WallBackend.sln  WallBackend.vcxproj  WallBackend.vcxproj.filters  vcpkg.json
.githooks/: _conventions.sh  commit-msg  pre-commit
.github/: CODEOWNERS
WallBackend/x64/Debug/: vc143.idb
WallBackend/x64/Debug/WallBackend.tlog/: WallBackend.lastbuildstate
scripts/: enable-githooks.ps1  enable-githooks.sh
src/: Application.cpp  config.h  main.cpp
src/application/: Application.cpp  Application.h
src/config/: config.cpp  config.h
src/database/: database.cpp  database.h
src/middlewares/: BearerAuthMiddleware.cpp  BearerAuthMiddleware.h
